--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spaghetti</title>
+    <title>Lezattopasto_id</title>
     <link href="src/output.css" rel="stylesheet" />
     
   </head>
@@ -30,7 +30,7 @@
   <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
     <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
       <li>
-        <a href="#home" class="block py-2 px-3 text-white bg-primary rounded md:bg-transparent md:text-primary md:p-0 md:dark:text-primary" aria-current="page">Home</a>
+        <a href="#home" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-primary md:p-0 md:dark:hover:text-primary dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Home</a>
       </li>
       <li>
         <a href="#about" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-primary md:p-0 md:dark:hover:text-primary dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
@@ -110,8 +110,8 @@
           <p class="mb-8 lg:mb-16 font-light text-center text-secondary dark:text-gray-400 sm:text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt molestias quis eligendi error eveniet doloribus cum et ipsum, quaerat esse!</p>
           <form action="#" class="space-y-8">
               <div>
-                  <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your email</label>
-                  <input type="email" id="email" class="email shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary dark:shadow-sm-light" placeholder="name@gmail.com" required>
+                  <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your Name</label>
+                  <input type="name" id="name" class="name shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary dark:shadow-sm-light" placeholder="JohnDoe" required>
               </div>
               <div>
                   <label for="subject" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Subject</label>
@@ -135,7 +135,7 @@
 <footer class="bg-gray-900 dark:bg-white">
   <div class="mx-auto w-full max-w-screen-xl">
   <div class="px-4 py-6 bg-gray-900 dark:bg-white md:flex md:items-center md:justify-between">
-      <span class="text-sm text-gray-500 dark:text-gray-300 sm:text-center">© 2023 <a href="https://github.com/Nathxmd">Nathan Mahesa</a>. All Rights Reserved.
+      <span class="text-sm text-gray-500 dark:text-gray-300 sm:text-center">© 2023 <a href="https://github.com/Nathxmd" target="_blank">Nathan Mahesa</a>. All Rights Reserved.
       </span>
       <div class="flex mt-4 sm:justify-center md:mt-0 space-x-5 rtl:space-x-reverse">
         <a href="https://www.instagram.com/lezzatopasto_id/" target="_blank" class="text-gray-400 hover:text-gray-900 dark:hover:text-white">
